--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "leaflet": "^1.9.3"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.2.0",
+    "@tailwindcss/typography": "^0.5.8",
     "@types/leaflet": "^1.9.0",
     "lint-staged": "^13.1.0",
     "nuxt": "3.0.0",
