--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "leaflet": "^1.9.3"
   },
   "devDependencies": {
+    "@iconify-json/carbon": "^1.1.12",
     "@nuxtjs/tailwindcss": "^6.2.0",
     "@tailwindcss/typography": "^0.5.8",
     "@types/leaflet": "^1.9.0",
     "lint-staged": "^13.1.0",
     "nuxt": "3.0.0",
+    "nuxt-icon": "^0.1.8",
     "prettier": "2.8.1"
   },
   "lint-staged": {
