--- a/package.json
+++ b/package.json
@@ -6,22 +6,24 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "format": "npx prettier --write --ignore-path .gitignore"
+    "lint": "eslint . --ext .js,.ts,.vue --fix --ignore-path .gitignore"
   },
   "dependencies": {
     "leaflet": "^1.9.3"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.34.0",
     "@iconify-json/carbon": "^1.1.12",
     "@nuxtjs/tailwindcss": "^6.2.0",
     "@tailwindcss/typography": "^0.5.8",
     "@types/leaflet": "^1.9.0",
+    "eslint": "^8.31.0",
     "lint-staged": "^13.1.0",
     "nuxt": "3.0.0",
     "nuxt-icon": "^0.1.8",
     "prettier": "2.8.1"
   },
   "lint-staged": {
-    "*": "npm run format"
+    "*": "npm run lint"
   }
 }
