--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "eslint": "^8.31.0",
     "lint-staged": "^13.1.0",
     "nuxt": "3.0.0",
-    "nuxt-icon": "^0.1.8",
-    "prettier": "2.8.1"
+    "nuxt-icon": "^0.1.8"
   },
   "lint-staged": {
     "*": "npm run lint"
