--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.34.0",
     "@iconify-json/carbon": "^1.1.12",
+    "@nuxtjs/device": "^3.1.0",
     "@nuxtjs/tailwindcss": "^6.2.0",
     "@tailwindcss/typography": "^0.5.8",
     "@types/leaflet": "^1.9.0",
