--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.34.0",
     "@iconify-json/carbon": "^1.1.12",
-    "@nuxtjs/tailwindcss": "^6.2.0",
+    "@nuxtjs/tailwindcss": "^6.6.6",
     "@tailwindcss/typography": "^0.5.8",
     "@types/leaflet": "^1.9.0",
     "eslint": "^8.31.0",
     "lint-staged": "^13.1.0",
-    "nuxt": "3.0.0",
-    "nuxt-icon": "^0.1.8"
+    "nuxt": "^3.4.2",
+    "nuxt-icon": "^0.3.3"
   },
   "lint-staged": {
     "*": "npm run lint"
