--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@nuxtjs/tailwindcss": "^6.6.6",
     "@tailwindcss/typography": "^0.5.8",
     "@types/leaflet": "^1.9.0",
+    "@vueuse/core": "^10.1.0",
+    "@vueuse/nuxt": "^10.1.0",
     "eslint": "^8.31.0",
     "lint-staged": "^13.1.0",
     "nuxt": "^3.4.2",
