--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint . --ext .js,.ts,.vue --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "leaflet": "^1.9.3"
+    "leaflet": "^1.9.3",
+    "three": "^0.153.0",
+    "vanta": "^0.5.24"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.34.0",
